[package]
name = "votalizer"
description = "Monitor Trezoa validators for voting lockout violations"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = "2.33.3"
criterion-stats = "0.3.0"
futures-util = "0.3.19"
itertools = "0.10.3"
log = "0.4.14"
reqwest = "0.11"
serde_json = "1.0"
trezoa-clap-utils = "1.10.20"
trezoa-cli-config = "1.10.20"
trezoa-client = "1.10.20"
trezoa-logger = "1.10.20"
trezoa-sdk = "1.10.20"
trezoa-vote-program = "1.10.20"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
trezoa-validator = "1.10.20"
